--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg navbar-light">
           <div class="container-fluid">
             <div class="d-flex justify-content-start mx-3"> <!-- Added mx-3 class for left margin -->
-              <img src="e-school-resources-master/ICON/Elogo.png" alt="">
+              <img src="images/ICON/Elogo.png" alt="">
             </div>
             <div class="d-flex justify-content-end mx-3"> <!-- Added mx-3 class for right margin -->
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -67,7 +67,7 @@
             <button class="btn btn-banner" id="banner">Get Started</button>
           </div>
           <div class="col-md-5">
-            <img src="e-school-resources-master/Photos/Illustration.png" class="img-fluid" alt="">
+            <img src="images/Photos/Illustration.png" class="img-fluid" alt="">
           </div>
         </div>
       </div>
@@ -93,8 +93,8 @@
     <div class="row row-cols-1 row-cols-md-4 g-4">
       <div class="col">
         <div class="card h-100" id="card-body">
-          <img src="e-school-resources-master/Photos/jessica-ruscello-OQSCtabGkSY-unsplash.jpg" class="card-img-top"
-            id="books-img" alt="...">
+          <img src="images/Photos/jessica-ruscello-OQSCtabGkSY-unsplash.jpg" class="card-img-top" id="books-img"
+            alt="...">
           <div class="card-body text-center">
             <h5 class="card-title">Books</h5>
             <p class="card-text text-muted">This is a longer card with supporting text below as a natural lead-in to
@@ -105,8 +105,7 @@
 
       <div class="col">
         <div class="card h-100" id="card-body">
-          <img src="e-school-resources-master/Photos/kaleidico-26MJGnCM0Wc-unsplash.jpg" class="card-img-top"
-            id="books-img" alt="...">
+          <img src="images/Photos/kaleidico-26MJGnCM0Wc-unsplash.jpg" class="card-img-top" id="books-img" alt="...">
           <div class="card-body text-center">
             <h5 class="card-title">Practical</h5>
             <p class="card-text text-muted">This is a longer card with supporting text below as a natural lead-in to
@@ -117,8 +116,7 @@
 
       <div class="col">
         <div class="card h-100" id="card-body">
-          <img src="e-school-resources-master/Photos/susan-q-yin-2JIvboGLeho-unsplash.jpg" class="card-img-top"
-            id="books-img" alt="...">
+          <img src="images/Photos/susan-q-yin-2JIvboGLeho-unsplash.jpg" class="card-img-top" id="books-img" alt="...">
           <div class="card-body text-center">
             <h5 class="card-title">Library</h5>
             <p class="card-text text-muted">This is a longer card with supporting text below as a natural lead-in to
@@ -129,8 +127,8 @@
 
       <div class="col">
         <div class="card h-100" id="card-body">
-          <img src="e-school-resources-master/Photos/thought-catalog-PeRNNIGmoNU-unsplash.jpg" class="card-img-top"
-            id="books-img" alt="...">
+          <img src="images/Photos/thought-catalog-PeRNNIGmoNU-unsplash.jpg" class="card-img-top" id="books-img"
+            alt="...">
           <div class="card-body text-center">
             <h5 class="card-title">Exams</h5>
             <p class="card-text text-muted">This is a longer card with supporting text below as a natural lead-in to
@@ -149,7 +147,7 @@
     <div class="row row-cols-1 row-cols-md-3 g-4">
       <div class="col">
         <div class="card h-100" id="card-body">
-          <img src="e-school-resources-master/Photos/Morder psyc.png" class="card-img-top" id="cour-img" alt="...">
+          <img src="images/Photos/Morder psyc.png" class="card-img-top" id="cour-img" alt="...">
           <div class="card-body text-center">
             <h5 class="card-title">Books Knowledge</h5>
             <p class="card-text text-muted">This is a longer card with supporting text below as a natural lead-in to
@@ -159,7 +157,7 @@
       </div>
       <div class="col">
         <div class="card h-100" id="card-body">
-          <img src="e-school-resources-master/Photos/Morder pychons.png" class="card-img-top" id="cour-img" alt="...">
+          <img src="images/Photos/Morder pychons.png" class="card-img-top" id="cour-img" alt="...">
           <div class="card-body text-center">
             <h5 class="card-title">Programming</h5>
             <p class="card-text text-muted">This is a longer card with supporting text below as a natural lead-in to
@@ -169,8 +167,7 @@
       </div>
       <div class="col">
         <div class="card h-100" id="card-body">
-          <img src="e-school-resources-master/Photos/Morder pyschology.png" class="card-img-top" id="cour-img"
-            alt="...">
+          <img src="images/Photos/Morder pyschology.png" class="card-img-top" id="cour-img" alt="...">
           <div class="card-body text-center">
             <h5 class="card-title">Practical Courses</h5>
             <p class="card-text text-muted">This is a longer card with supporting text below as a natural lead-in to
@@ -189,7 +186,7 @@
       <h1 class="testh1">Testimonial</h1>
       <div class="row d-flex justify-content-center align-items-center">
         <div class="col-md-2">
-          <img src="e-school-resources-master/Photos/Man.png" class="img-fluid" alt="">
+          <img src="images/Photos/Man.png" class="img-fluid" alt="">
         </div>
         <div class="col-md-7">
           <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis minus quisquam ab quos fugit nulla
